<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.upn.myoyichan.ui.home.HomeFragment"
        android:label="@string/nav_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/medicamentosFragment"
        android:name="com.upn.myoyichan.ui.medicamentos.MedicamentosFragment"
        android:label="@string/nav_medicamentos"
        tools:layout="@layout/fragment_medicamentos" />

    <fragment
        android:id="@+id/vitalesFragment"
        android:name="com.upn.myoyichan.ui.vitales.VitalesFragment"
        android:label="@string/nav_vitales"
        tools:layout="@layout/fragment_vitales" />

    <fragment
        android:id="@+id/contactosFragment"
        android:name="com.upn.myoyichan.ui.contactos.ContactosFragment"
        android:label="@string/nav_contactos"
        tools:layout="@layout/fragment_contactos" />

</navigation>
